2003-01-08  Neil Jerram  <neil@ossau.uklinux.net>

	* readline.c (scm_readline): Check that scm_cur_outp is an output
	port, not an input one.

2002-12-08  Rob Browning  <rlb@defaultvalue.org>

	* configure.in (GUILE_EFFECTIVE_VERSION): AC_SUBST.

	* Makefile.am (ice9dir): VERSION -> GUILE_EFFECTIVE_VERSION.

2002-10-21  Mikael Djurfeldt  <mdj@linnaeus>

	* readline.scm (activate-readline): Look for use-emacs-interface
	option in the guile-user module instead of the-root-module.

2002-09-15  Marius Vollmer  <mvo@zagadka.ping.de>

	* readline.scm: Replaced 'feature?' with 'provided?' thru-out.

2002-07-20  Rob Browning  <rlb@defaultvalue.org>

	* readline.scm: dynamic-link libguilereadline-v-MAJOR now.

	* configure.in (LIBGUILEREADLINE_MAJOR): replaces
	LIBGUILEREADLINE_LTHACK.

	* Makefile.am: just name dlsymable libs with their major version
	number, not the whole version.  That should be sufficient for now.

	* LIBGUILEREADLINE-VERSION: adjust versions and just name
	dlsymable libs with their major version number, not the whole
	version.  That should be sufficient for now.

2002-04-30  Marius Vollmer  <marius.vollmer@uni-dortmund.de>

	* autogen.sh: Invoke plain aclocal instead of guile-aclocal.sh.
	We don't need the Guile m4 macros and the previous invocation of
	guile-aclocal.sh created the aclocal.m4 file in the wrong
	directory (see change from 2002-04-26).

2002-04-26  Marius Vollmer  <mvo@zagadka.ping.de>

	* autogen.sh: Change to parent dir before invoking
	guile-aclocal.sh.

2002-04-12  Rob Browning  <rlb@defaultvalue.org>

	* readline.scm: fix typo...

2002-04-09  Rob Browning  <rlb@defaultvalue.org>

	* readline.scm: hack around dynamic-link problems by
	using painfully explicit lib names.

	* configure.in: add documentation for AC_DEFINEs and add
	LIBGUILEREADLINE_LTHACK.

	* Makefile.am: hack around dynamic-link problems by
	using painfully explicit lib names.

	* LIBGUILEREADLINE-VERSION: hack around dynamic-link problems by